--- a/package.json
+++ b/package.json
@@ -1,11 +1,11 @@
 {
   "name": "develop",
   "version": "1.0.0",
-  "description": "",
   "main": "server.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "node server.js"
+    "start": "node server.js",
+    "dev": "nodemon server"
   },
   "repository": {
     "type": "git",
@@ -16,5 +16,13 @@
   "bugs": {
     "url": "https://github.com/gstinsonjr42/Eat-Da-Burger/issues"
   },
-  "homepage": "https://github.com/gstinsonjr42/Eat-Da-Burger#readme"
+  "homepage": "https://github.com/gstinsonjr42/Eat-Da-Burger#readme",
+  "description": "",
+  "dependencies": {
+    "express": "^4.17.1",
+    "mysql": "^2.18.1"
+  },
+  "devDependencies": {
+    "nodemon": "^2.0.7"
+  }
 }
